// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aisle List basic render tests Renders Aisle Screen with Data 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 5,
              "paddingHorizontal": 15,
              "paddingTop": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_CONFIRMATION" translation]
        </Text>
        <Text
          style={
            Object {
              "fontSize": 14,
              "paddingBottom": 15,
              "paddingHorizontal": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
  <LocationHeader
    details="6 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={
      Array [
        Object {
          "aisleId": 1,
          "aisleName": "Aisle 1",
          "sectionCount": 30,
        },
        Object {
          "aisleId": 2,
          "aisleName": "Aisle 2",
          "sectionCount": 0,
        },
        Object {
          "aisleId": 3,
          "aisleName": "Aisle 3",
          "sectionCount": 2,
        },
        Object {
          "aisleId": 4,
          "aisleName": "Aisle 4",
          "sectionCount": 2,
        },
        Object {
          "aisleId": 5,
          "aisleName": "Aisle 5",
          "sectionCount": 30,
        },
        Object {
          "aisleId": 6,
          "aisleName": "Aisle 6",
          "sectionCount": 0,
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Aisle List basic render tests Renders Aisle Screen with no-aisles-message when getAisles response is 204 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 5,
              "paddingHorizontal": 15,
              "paddingTop": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_CONFIRMATION" translation]
        </Text>
        <Text
          style={
            Object {
              "fontSize": 14,
              "paddingBottom": 15,
              "paddingHorizontal": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Aisle List basic render tests Renders Manual Scan Component when isManualScanEnabled is set to true 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 5,
              "paddingHorizontal": 15,
              "paddingTop": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_CONFIRMATION" translation]
        </Text>
        <Text
          style={
            Object {
              "fontSize": 14,
              "paddingBottom": 15,
              "paddingHorizontal": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Aisle List basic render tests renders correctly with remove zone modal after api errors 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 5,
              "paddingHorizontal": 15,
              "paddingTop": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_CONFIRMATION" translation]
        </Text>
        <Text
          style={
            Object {
              "fontSize": 14,
              "paddingBottom": 15,
              "paddingHorizontal": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.RETRY\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Aisle List basic render tests renders correctly with remove zone modal preconfirm 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 5,
              "paddingHorizontal": 15,
              "paddingTop": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_CONFIRMATION" translation]
        </Text>
        <Text
          style={
            Object {
              "fontSize": 14,
              "paddingBottom": 15,
              "paddingHorizontal": 15,
              "textAlign": "center",
            }
          }
        >
          [missing "en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Aisle List basic render tests renders correctly with remove zone modal waiting for api 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Error"
    onClose={[Function]}
  >
    <ActivityIndicator
      animating={true}
      color="#0071e9"
      hidesWhenStopped={true}
      size="large"
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
  </CustomModalComponent>
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Test Get Aisle Api Response Renders Aisle Api Error Message 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders Aisle Api Error Message when get aisles request times out 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is 400 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is 424 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is 500 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is network error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is timeout error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Get Aisle Api Response Renders loading indicator when waiting for Aisle Api response 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;
